# Robocup_Mid_Sim

./: .gitignore  README.md  gameReady.sh
src/auto_referee/: package.xml  setup.cfg  setup.py
src/auto_referee/auto_referee/: compition_state.py  field.py  main.py  referee_node.py  rms_isGoal.py
src/auto_referee/auto_referee/robocup_msls/: __init__.py  app.py  config_writer.py  constants.py  main_window.py  models.py  qt_compat.py  ros_subscriber.py  score_bridge.py  styles.py
src/auto_referee/auto_referee/robocup_msls/pages/: match_page.py  start_page.py
src/auto_referee/launch/: auto_referee.launch.py
src/auto_referee/test/: test_field.py
src/gazebo_visual/nubot_description/: TODO  package.xml  setup.cfg  setup.py
src/gazebo_visual/nubot_description/models/: change
src/gazebo_visual/nubot_description/models/RoboCup15_MSL_Goal/: model.config  model.sdf
src/gazebo_visual/nubot_description/models/football/: model.config  model.sdf
src/gazebo_visual/nubot_description/models/football/meshes/: ball.dae
src/gazebo_visual/nubot_description/models/nubot/: model.config  model.sdf
src/gazebo_visual/nubot_description/models/nubot1/: model.config  model.sdf
src/gazebo_visual/nubot_description/models/nubot1/meshes/: nubot_frame1.dae
src/gazebo_visual/nubot_description/models/nubot2/: model.config  model.sdf
src/gazebo_visual/nubot_description/models/nubot2/meshes/: nubot_frame2.dae
src/gazebo_visual/nubot_description/models/nubot3/: model.config  model.sdf
src/gazebo_visual/nubot_description/models/nubot3/meshes/: nubot_frame3.dae
src/gazebo_visual/nubot_description/models/nubot4/: model.config  model.sdf
src/gazebo_visual/nubot_description/models/nubot4/meshes/: nubot_frame4.dae  nubot_frame_collision.dae
src/gazebo_visual/nubot_description/models/nubot5/: model.config  model.sdf
src/gazebo_visual/nubot_description/models/nubot5/meshes/: nubot_frame5.dae
src/gazebo_visual/nubot_description/models/rival1/: model.config  model.sdf
src/gazebo_visual/nubot_description/models/rival1/meshes/: rival_frame1.dae
src/gazebo_visual/nubot_description/models/rival2/: model.config  model.sdf
src/gazebo_visual/nubot_description/models/rival2/meshes/: rival_frame2.dae
src/gazebo_visual/nubot_description/models/rival3/: model.config  model.sdf
src/gazebo_visual/nubot_description/models/rival3/meshes/: rival_frame3.dae
src/gazebo_visual/nubot_description/models/rival4/: model.config  model.sdf
src/gazebo_visual/nubot_description/models/rival4/meshes/: rival_frame4.dae
src/gazebo_visual/nubot_description/models/rival5/: model.config  model.sdf
src/gazebo_visual/nubot_description/models/rival5/meshes/: rival_frame5.dae
src/gazebo_visual/nubot_gazebo/: package.xml  setup.cfg  setup.py
src/gazebo_visual/nubot_gazebo/config/: bridge.yaml  global_config.yaml
src/gazebo_visual/nubot_gazebo/launch/: dribble_controller.launch.py  load_world.launch.py  load_world_cpu.launch.py  load_world_gpu.launch.py  nubot_gazebo.launch.py  planar_motion_controller.launch.py  test.launch.py
src/gazebo_visual/nubot_gazebo/nubot_gazebo/: ball_gazebo.py  dribble_controller.py  planar_motion_controller.py
src/gazebo_visual/nubot_gazebo/worlds/: robocup15MSL.sdf
src/gazebo_visual/nubot_plugin/: CMakeLists.txt  ReadMe.md  package.xml
src/gazebo_visual/nubot_plugin/src/: README.md  ball_gazebo.cc  ball_gazebo.hh  nubot_plugin.cc  nubot_plugin.hh
src/gazebo_visual/nubot_plugins/: CMakeLists.txt  package.xml
src/gazebo_visual/nubot_plugins/src/: nubot_plugin.hh
src/py_scripts/: check_interface.py
src/robot_code/nubot_common/: package.xml  setup.cfg  setup.py
src/robot_code/nubot_common/config/: Fieldinformation.py
src/robot_code/nubot_control/: README.md  package.xml  setup.cfg  setup.py
src/robot_code/nubot_control/docs/: CODE_ROLES.md
src/robot_code/nubot_control/launch/: nubot_control.launch.py
src/robot_code/nubot_control/nubot_control/: __init__.py  activerole.py  assistrole.py  constants.py  control_node.py  field.py  geometry.py  goaliestrategy.py  midfieldrole.py  models.py  passiverole.py  strategy.py
src/robot_code/nubot_control/test/: test_geometry.py  test_roles.py  test_strategy.py
src/robot_code/nubot_hwcontroller/: README.md  package.xml  setup.cfg  setup.py
src/robot_code/nubot_hwcontroller/launch/: hwcontroller.launch.py  nubot_hwcontroller.launch.py
src/robot_code/nubot_hwcontroller/nubot_hwcontroller/: __init__.py  controller.py  hwcontroller_node.py
src/robot_code/nubot_hwcontroller/test/: test_controller.py
src/robot_code/nubot_interfaces/: CMakeLists.txt  package.xml
src/robot_code/nubot_interfaces/include/: Angle.hpp  Circle.hpp  DPoint.hpp  Line.hpp  core.hpp
src/robot_code/nubot_interfaces/msg/: ActionCmd.msg  Angle.msg  BallInfo.msg  BallInfo3D.msg  BallIsHolding.msg  CoachInfo.msg  CoachWorldModelInfo.msg  CurrentCmd.msg  MotionCmd.msg  MotorInfo.msg  ObjectInfo.msg  ObstaclesInfo.msg  ObstaclesInfo3D.msg  OdoInfo.msg  OminiVisionInfo.msg  PPoint.msg  PassCommands.msg  Point3D.msg  Relocation.msg  RobotInfo.msg  SendingOff.msg  SimulationStrategy.msg  StrategyInfo.msg  TargetInfo.msg  TeleopJoy.msg  Teleop_joy.msg  VelCmd.msg  WorldModelInfo.msg
src/robot_code/nubot_interfaces/srv/: DribbleId.srv
src/robot_code/simulation_interface/: package.xml  setup.cfg  setup.py
src/robot_code/simulation_interface/launch/: simulation_interface.launch.py
src/robot_code/simulation_interface/resource/: simulation_interface
src/robot_code/simulation_interface/simulation_interface/: __init__.py  coach_bridge.py  dribble_status_server.py  strategy_aggregator.py
src/robot_code/world_model/: package.xml  setup.cfg  setup.py
src/robot_code/world_model/launch/: sim_world_model.launch.py
src/robot_code/world_model/world_model/: sim_world_model.py
src/tools/: package.xml  setup.py
src/tools/tools/: sub_football_pose.py
