<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>nubot_gazebo</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="1595642896@qq.com">lq</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>auto_referee</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nubot_control</exec_depend>
  <exec_depend>nubot_hwcontroller</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>ros_gz_interfaces</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>tf2_msgs</exec_depend>
  <exec_depend>simulation_interface</exec_depend>
  <exec_depend>world_model</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
