<?xml version="1.0"?>
<package format="3">
  <name>nubot_hwcontroller</name>
  <version>0.1.0</version>
  <description>Minimal ROS 2 Python hardware controller adapter for NuBot simulation migration.</description>
  <maintainer email="todo@example.com">NuBot simulation maintainer</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>nubot_interfaces</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
