<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>nubot_interfaces</name>
    <version>0.0.0</version>
    <description>TODO: Package description</description>
    <maintainer email="1595642896@qq.com">lq</maintainer>
    <license>TODO: License declaration</license>


    <!-- 表示需要依赖于ament_cmake包，用于编译CMake文件 -->
    <buildtool_depend>ament_cmake</buildtool_depend>

    <!-- 表示需要依赖于rosidl_default_generators包，用于生成接口代码 -->
    <build_depend>rosidl_default_generators</build_depend>

    <!-- 表示需要依赖于rosidl_default_runtime包，用于运行时使用接口代码 -->
    <exec_depend>rosidl_default_runtime</exec_depend>
    <!-- 表示当前包是一个ROS 2接口包，需要被ROS 2的工具识别 -->
    <member_of_group>rosidl_interface_packages</member_of_group>

    <test_depend>ament_lint_auto</test_depend>
    <test_depend>ament_lint_common</test_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>