<?xml version="1.0"?>
<package format="3">
  <name>nubot_interfaces</name>
  <version>0.1.0</version>
  <description>ROS 2 interfaces migrated from the ROS 1 nubot_common message and service definitions.</description>
  <maintainer email="todo@example.com">NuBot simulation maintainer</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rosidl_default_generators</build_depend>

  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
